<resources>

    <string name="app_name">Capacitive Buttons</string>
    <string name="app_version">1.0.12</string>
    <string name="app_version_display">1.0.12</string>
    <string name="title_activity_main">Capacitive Buttons</string>
    <string name="btn_credits">Credits</string>
    <string name="btn_off">Off</string>
    <string name="btn_dim">Dim</string>
    <string name="btn_bright">Bright</string>
    <string name="btn_upgrade">Upgrade</string>
    <string name="pref_boot_title">Set On Boot</string>
    <string name="pref_boot_summary">Set the brightness of the capacitive
        buttons when the device boots</string>
    <string name="menu_copy">Copy</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pref_debug_title">Debug Information</string>
    <string name="pref_debug_summary">Show information that should be submitted
        along with bug reports to facilitate debugging of issues</string>
    <string name="txt_upgrade_title">Upgrade to Pro version</string>
    <string name="txt_upgrade_description">to get new features immediately</string>

    <!-- Error messages about different failures that can occur when setting
         the capacitive buttons brightness -->

    <string name="set_error_dim_not_supported">This device, ROM, or kernel does
        not support setting the brightness to "dim": %s</string>
    <string name="set_error_chmod_failed">Changing permissions of file failed:
        %1$s (%2$s)</string>
    <string name="set_error_chown_exit_code">Changing ownership of file %1$s
        failed: chown completed with non-zero exit code: %2$d (%3$s)</string>
    <string name="set_error_chown_launch">Changing ownership of file %1$s
        failed: launching chown command failed: %2$s</string>
    <string name="set_error_chown_wait">Changing ownership of file %1$s
        failed: waiting for chown command to complete was interrupted:
        %2$s</string>
    <string name="set_error_root_denied">Superuser permission was denied;
        this application requires superuser privileges in order to change
        the capacitive buttons brightness (%s)</string>
    <string name="set_error_root_not_rooted">This device does not appear to
        be rooted; this application requires superuser (a.k.a. "root")
        privileges in order to change the capacitive buttons brightness
        </string>
    <string name="set_error_root_error">Error requesting superuser privileges:
        %s</string>
    <string name="set_error_root_timeout">Timeout occurred while requesting
        superuser privileges (%s)</string>
    <string name="set_error_stat">Unable to determine ownership of file:
        %1$s (stat command failed: %2$s)</string>
    <string name="set_error_io">I/O error writing to file: %1$s (%2$s)</string>
    <string name="set_error_file_not_found">File not found: %s</string>
    <string name="set_error_unsupported">This device is not supported</string>
    <string name="set_error_generic">Writing to file %1$s failed: %2$s</string>
    <string name="set_error_unexpected">Unexpected exception: %s</string>

</resources>
