<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/default_brightness_label" />

    <ImageView
        android:id="@+id/btnOff"
        android:contentDescription="@string/btn_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/brightness_button_off" />

    <ImageView
        android:id="@+id/btnDim"
        android:contentDescription="@string/btn_dim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/brightness_button_dim" />

    <ImageView
        android:id="@+id/btnBright"
        android:contentDescription="@string/btn_bright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/brightness_button_bright" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_upgrade_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_upgrade_description" />

        </LinearLayout>

        <Button
            android:id="@+id/btnUpgrade"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_upgrade" />

    </LinearLayout>

</LinearLayout>
