<?xml version="1.0" encoding="utf-8"?>

<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetFlipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	 <ImageView
        android:id="@+id/btnOff"
        android:contentDescription="@string/btn_off"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/brightness_off" />

    <ImageView
        android:id="@+id/btnDim"
        android:contentDescription="@string/btn_dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/brightness_dim" />

    <ImageView
        android:id="@+id/btnBright"
        android:contentDescription="@string/btn_bright"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/brightness_bright" />

</ViewFlipper>
